--- a/index.css
+++ b/index.css
@@ -6,10 +6,10 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
+    font-family: 'Be Vietnam Pro';
     font-family: 'League Spartan';
     font-family: 'Readex Pro';
     font-family: 'Lexend';
-    font-family: 'Be Vietnam Pro';
     font-family: 'Comfortaa';
     color: #E4E4E4;
     line-height: 1.5;
@@ -37,6 +37,8 @@
 
 html {
     background-color: #292929;
+    /* background: #ABB7FB;
+    background: radial-gradient(at right bottom, #ABB7FB, #4324B6); */
 }
 
 body {
@@ -247,19 +249,65 @@ body {
     z-index: 3;
 }
 
+.title-content {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
 .title-content span {
     background-color: #0081FF1A;
-    padding: 2px 6px 4px 6px;
+    padding: 2px 8px;
     border-radius: 4px;
     color: #0099FF;
 }
 
+.count-up-timer {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    right: 0;
+    font-size: 20px;
+    /* background-color: #0081FF1A; */
+    padding: 2px 0 2px 8px;
+    border-radius: 4px;
+    gap: 10px;
+}
+
+.count-up-timer strong {
+    border-radius: 4px;
+    width: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2px;
+    background-color: #0081FF1A;
+}
+.count-up-timer span{
+    color: #0081FF;
+    /* font-family: 'Lexend';
+    font-family: 'Comfortaa';
+    font-family: 'Be Vietnam Pro';
+    font-family: 'Readex Pro';
+    font-family: 'League Spartan'; */
+}
+.count-up-timer span:nth-child(1){
+    width: 30px;
+    text-align: right;
+}
+.count-up-timer span:nth-child(2){
+    position: relative;
+    top: -2px;
+}
+.count-up-timer span:nth-child(3){
+    width: 30px;
+    text-align: left;
+}
 .question-show {
     margin: 0 -15px;
     flex: 1;
     overflow: hidden;
     display: flex;
-    transform: translateY(-1px);
     position: relative;
 }
 
@@ -328,6 +376,9 @@ body {
 .question-head {
     border-radius: 20px;
     background-color: #3B3B3B;
+    /* background-color: #FFFFFF1A;
+    backdrop-filter: blur(100px); */
+    /* box-shadow: 0 0 5px #0000001A; */
     padding: var(--padding-width-large);
     display: flex;
     align-items: stretch;
