--- a/index.css
+++ b/index.css
@@ -6,11 +6,11 @@
     box-sizing: border-box;
     list-style: none;
     text-decoration: none;
-    font-family: 'Be Vietnam Pro';
-    font-family: 'League Spartan';
-    font-family: 'Readex Pro';
-    font-family: 'Lexend';
     font-family: 'Comfortaa';
+    font-family: 'Lexend';
+    font-family: 'Readex Pro';
+    font-family: 'League Spartan';
+    font-family: 'Be Vietnam Pro';
     color: #E4E4E4;
     line-height: 1.5;
     user-select: none !important;
@@ -127,7 +127,7 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 5;
     display: none;
 }
 
@@ -148,7 +148,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 2;
+    z-index: 6;
     display: none;
 }
 
@@ -268,41 +268,70 @@ body {
     position: absolute;
     right: 0;
     font-size: 20px;
-    /* background-color: #0081FF1A; */
-    padding: 2px 0 2px 8px;
-    border-radius: 4px;
-    gap: 10px;
+    padding: 2px 0 2px 10px;
+    background-color: #0081FF1A;
+    border-radius: 10px;
 }
 
 .count-up-timer strong {
-    border-radius: 4px;
     width: fit-content;
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 2px;
-    background-color: #0081FF1A;
 }
-.count-up-timer span{
+
+.count-up-timer i {
     color: #0081FF;
-    /* font-family: 'Lexend';
-    font-family: 'Comfortaa';
-    font-family: 'Be Vietnam Pro';
-    font-family: 'Readex Pro';
-    font-family: 'League Spartan'; */
 }
-.count-up-timer span:nth-child(1){
-    width: 30px;
+.count-up-timer span {
+    font-weight: normal;
+}
+
+.count-up-timer span:nth-child(1) {
+    width: 35px;
     text-align: right;
 }
-.count-up-timer span:nth-child(2){
+
+.count-up-timer span:nth-child(2) {
     position: relative;
     top: -2px;
+    padding: 0 4px;
 }
-.count-up-timer span:nth-child(3){
-    width: 30px;
+
+.count-up-timer span:nth-child(3) {
+    width: 35px;
     text-align: left;
 }
+
+.count-correct-answer {
+    position: absolute;
+    left: 0;
+    font-size: 20px;
+    background-color: #0081FF1A;
+    padding: 2px 10px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 10px;
+}
+
+.count-correct-answer i:nth-child(1) {
+    color: #00BB00;
+}
+.count-correct-answer i:nth-child(3) {
+    color: #CC0000;
+}
+.count-correct-answer strong {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.count-correct-answer span {
+    font-weight: normal;
+}
+
 .question-show {
     margin: 0 -15px;
     flex: 1;
