--- a/index.css
+++ b/index.css
@@ -566,18 +566,38 @@ body {
     }
 
     .title-content {
-        font-size: 28px;
+        font-size: 24px;
 
         span {
-            font-size: 28px;
+            font-size: 24px;
             font-weight: bold;
         }
     }
-
+    .count-up-timer{
+        position: fixed;
+        right: 15px;
+        bottom: 16px;
+    }
+    .count-correct-answer{
+        position: fixed;
+        left: 15px;
+        bottom: 16px;
+    }
+    .title::before{
+        content: '';
+        position: fixed;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        height: 57px;
+        background-color: #292929;
+    }
     .question {
         height: calc(100svh - 86px);
     }
-
+    .question-show::after{
+        bottom: 57px;
+    }
     .question-num {
         strong {
             font-size: 24px;
